# gst-plugin-dalsa

./: .gitignore  Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  libtool  meson.build
src/: Makefile  Makefile.am  Makefile.in  gstdalsa.c  gstdalsa.h
